# Better-Progression

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cwmods/: CMakeLists.txt  cwmods.cpp  cwmods.h
cwmods/common/: FloatVector2.cpp  FloatVector2.h
cwmods/cube/: BaseWidget.cpp  Block.h  ChatWidget.h  Client.cpp  Client.h  Controls.cpp  Creature.cpp  Creature.h  Field.h  GUI.cpp  GUI.h  Game.cpp  Game.h  Host.h  Music.h  Options.cpp  ServerUpdates.h  World.cpp  World.h  Zone.cpp  Zone.h  constants.h
cwmods/msvc/: _Thrd_t.cpp
cwmods/plasma/: FontEngine.cpp  Matrix.cpp  Node.cpp  Node.h  Object.h  Widget.h
src/: cwmods.h  dllmain.cpp  dllmain.h
src/core/: game_structures.h  main.cpp  main.h
src/core/hook/: hook.h
src/core/hook/hooks/artifact/: hook_set_artifact_stats.h
src/core/hook/hooks/artifact/base_stats/: hook_get_attack_power.h  hook_get_hit_points.h  hook_get_player_armor.h  hook_get_player_crit.h  hook_get_player_haste.h  hook_get_player_regeneration.h  hook_get_player_resistance.h  hook_get_spell_power.h
src/core/hook/hooks/artifact/display/: hook_artifact_display_roundf.h  hook_concat_artifact_suffix.h  hook_round_artifact_thing.h
src/core/hook/hooks/command/: hook_send_chat.h
src/core/hook/hooks/item_generation/: hook_create_armor.h  hook_create_weapon.h  hook_give_item.h
src/core/hook/hooks/pvp/: hook_can_attack_entity.h
src/core/hook/hooks/scaling/: hook_get_item_crit.h  hook_get_item_haste.h  hook_get_item_modifier.h  hook_get_item_regen.h
src/core/memory/: memory_helper.h
